fix mobile align

--- a/body1.css
+++ b/body1.css
@@ -63,7 +63,7 @@
 
 @media screen and (max-width: 1023px) {
   .about {
-    height: 130vh;
+    height: 150vh;
   }
 } 
 
